# vowpal_wabbit

./: Makefile
bindings/c/src/: c_io_adapter.cc  c_io_adapter.h
cs/cli/: clr_io.cpp  clr_io.h  spanning_tree_clr.cpp  spanning_tree_clr.h  vowpalwabbit.cpp  vowpalwabbit.h  vw_arguments.h  vw_base.cpp  vw_base.h  vw_builder.cpp  vw_builder.h  vw_cbutil.cpp  vw_cbutil.h  vw_clr.h  vw_example.cpp  vw_example.h  vw_exception.cpp  vw_interface.h  vw_label.h  vw_labelcomparator.h  vw_model.cpp  vw_model.h  vw_prediction.cpp  vw_prediction.h  vw_settings.h
cs/vw.net.native/: vw.net.api_status.cc  vw.net.api_status.h  vw.net.arguments.cc  vw.net.builders.cc  vw.net.builders.h  vw.net.cbutil.cc  vw.net.ds_interaction.cc  vw.net.ds_interaction.h  vw.net.example.cc  vw.net.example.h  vw.net.labels.cc  vw.net.labels.h  vw.net.multi_ex.cc  vw.net.multi_ex.h  vw.net.native.cc  vw.net.native.h  vw.net.native_exception.cc  vw.net.native_exception.h  vw.net.predictions.cc  vw.net.predictions.h  vw.net.spanning_tree_clr.cc  vw.net.spanning_tree_clr.h  vw.net.stream_adapter.h  vw.net.workspace.cc  vw.net.workspace.h  vw.net.workspace_lda.cc  vw.net.workspace_lda.h  vw.net.workspace_parse_json.cc
java/: CMakeLists.txt  pom.xml.in
java/src/main/c++/: jni_base_learner.cc  jni_base_learner.h  jni_spark_cluster.cc  jni_spark_vw.cc  jni_spark_vw.h  util.cc  vowpalWabbit_VW.cc  vowpalWabbit_VW.h  vowpalWabbit_learner_VWActionProbsLearner.cc  vowpalWabbit_learner_VWActionScoresLearner.cc  vowpalWabbit_learner_VWCCBLearner.cc  vowpalWabbit_learner_VWLearners.cc  vowpalWabbit_learner_VWMulticlassLearner.cc  vowpalWabbit_learner_VWMultilabelsLearner.cc  vowpalWabbit_learner_VWProbLearner.cc  vowpalWabbit_learner_VWScalarLearner.cc  vowpalWabbit_learner_VWScalarsLearner.cc
java/src/main/java/common/: Native.java
java/src/main/java/org/vowpalwabbit/spark/: ClusterSpanningTree.java  VowpalWabbitArguments.java  VowpalWabbitExample.java  VowpalWabbitMurmur.java  VowpalWabbitNative.java  VowpalWabbitPerformanceStatistics.java
java/src/main/java/org/vowpalwabbit/spark/prediction/: ScalarPrediction.java
java/src/main/java/vowpalWabbit/: VW.java
java/src/main/java/vowpalWabbit/learner/: VWActionProbsLearner.java  VWActionScoresLearner.java  VWFloatLearner.java  VWLearners.java  VWMulticlassLearner.java  VWScalarsLearner.java
java/src/main/java/vowpalWabbit/responses/: ActionProbs.java  ActionScores.java  DecisionScores.java  Multilabels.java  PDF.java
java/src/main/java/vw980/common/: Native.java
java/src/main/java/vw980/org/vowpalwabbit/spark/: ClusterSpanningTree.java  VowpalWabbitArguments.java  VowpalWabbitExample.java  VowpalWabbitMurmur.java  VowpalWabbitNative.java
java/src/main/java/vw980/org/vowpalwabbit/spark/prediction/: ScalarPrediction.java
java/src/main/java/vw980/vowpalWabbit/: package-info.java
java/src/main/java/vw980/vowpalWabbit/learner/: VWBase.java  VWCCBLearner.java  VWIntLearner.java  VWLearner.java  VWLearnerBase.java  VWLearners.java  VWMulticlassLearner.java  VWMultilabelsLearner.java  VWProbLearner.java  VWScalarLearner.java  VWTypedLearner.java  package-info.java
java/src/main/java/vw980/vowpalWabbit/responses/: ActionProb.java  ActionScore.java  PDFSegment.java  PDFValue.java
java/src/test/java/org/vowpalwabbit/spark/: VowpalWabbitNativeIT.java
java/src/test/java/vowpalWabbit/: VWTestHelper.java
java/src/test/java/vowpalWabbit/learner/: VWActionProbsLearnerTest.java  VWLearnersTest.java  VWMultilabelsLearnerTest.java  VWScalarLearnerTest.java  VWScalarsLearnerTest.java
java/src/test/java/vw980/org/vowpalwabbit/spark/: VowpalWabbitNativeIT.java
java/src/test/java/vw980/vowpalWabbit/: ClosingTest.java  VWTestHelper.java
java/src/test/java/vw980/vowpalWabbit/learner/: VWActionScoresLearnerTest.java  VWCCBLearnerTest.java  VWMulticlassLearnerTest.java
nuget/native/test/: main.cc
python/: pylibvw.cc
test/benchmarks/: benchmark_epsilon_decay.cc  benchmark_funcs.cc  input_format_benchmarks.cc
test/benchmarks/standalone/: benchmark_text_input.cc  rcv1_benchmarks.cc
test/tools/fuzzing/: main.cc
test/tools/parser_throughput/: main.cc
utl/dump_options/: main.cc
utl/flatbuffer/: txt_to_flat.cc  vw_to_flat.cc  vw_to_flat.h
vowpalwabbit/allreduce/src/: allreduce_sockets.cc  allreduce_threads.cc
vowpalwabbit/c_wrapper/src/: vwdll.cc
vowpalwabbit/c_wrapper/tests/: vwdll_test.cc
vowpalwabbit/cache_parser/src/: parse_example_cache.cc
vowpalwabbit/cache_parser/tests/: cache_test.cc
vowpalwabbit/cli/src/: main.cc
vowpalwabbit/common/tests/: basic_tokenize_test.cc  hash_test.cc  text_utils_test.cc
vowpalwabbit/config/src/: cli_help_formatter.cc  cli_options_serializer.cc  help_formatter.cc  option.cc  option_group_definition.cc  options.cc  options_cli.cc  options_name_extractor.cc
vowpalwabbit/config/tests/: options_cli_test.cc  options_test.cc
vowpalwabbit/core/src/: accumulate.cc  action_score.cc  api_status.cc  array_parameters_dense.cc  array_parameters_sparse.cc  best_constant.cc  cb.cc  cb_continuous_label.cc  cb_type.cc  ccb_label.cc  ccb_reduction_features.cc  confidence_sequence.cc  confidence_sequence_robust.cc  cost_sensitive.cc  cressieread.cc  crossplat_compat.cc  daemon_utils.cc  debug_print.cc  decision_scores.cc  distributionally_robust.cc  example.cc  example_predict.cc  feature_group.cc  gen_cs_example.cc  global_data.cc  hashstring.cc  interactions.cc  io_buf.cc  kskip_ngram_transformer.cc  label_dictionary.cc  label_parser.cc  label_type.cc  learner.cc  loss_functions.cc  merge.cc  metric_sink.cc  metrics_collector.cc  multiclass.cc  multilabel.cc  named_labels.cc  (+24 more)
vowpalwabbit/core/tests/: automl_test.cc  automl_weights_test.cc  baseline_cb_test.cc  cats_test.cc  cats_tree_test.cc  cats_user_provided_pdf.cc  cb_explore_adf_test.cc  ccb_parser_test.cc  (+50 more)
(+366 files in other folders)
